--- a/00_notes/lectures/trees.tex
+++ b/00_notes/lectures/trees.tex
@@ -149,6 +149,7 @@ def inorder(node):
         inorder(node.right)
 \end{lstlisting}  
 \end{algo}
+\newpage
 
 \subsubsection{DFS Pre-order Traversal (Root → Left → Right)}
 \begin{definition}
