--- a/00_notes/lectures/linked_list.tex
+++ b/00_notes/lectures/linked_list.tex
@@ -31,7 +31,7 @@ class SinglyLinkedList:
         
 \end{algo}
 
-\subsubsection{Operations}
+\subsection{Operations}
 \begin{summary}
     \begin{center}
         \begin{tabular}{lc}
@@ -66,7 +66,7 @@ class DoublyLinkedList:
 \end{lstlisting}
 \end{algo}
 
-\subsubsection{Operations}
+\subsection{Operations}
 \begin{summary}
     \begin{center}
         \begin{tabular}{lc}
@@ -101,7 +101,7 @@ class CircularLinkedList:
 \end{lstlisting}
 \end{algo}  
 
-\subsubsection{Operations}
+\subsection{Operations}
 \begin{summary}
     \begin{center}
         \begin{tabular}{lc}
