--- a/00_notes/lectures/heap_pq.tex
+++ b/00_notes/lectures/heap_pq.tex
@@ -91,41 +91,10 @@ class MinHeap:
     def right(self, i):
         return 2 * i + 2
 
-    def insert(self, key):
-        self.heap.append(key)
-        i = len(self.heap) - 1
-        while i != 0 and self.heap[self.parent(i)] > self.heap[i]:
-            self.heap[i], self.heap[self.parent(i)] = self.heap[self.parent(i)], self.heap[i]
-            i = self.parent(i)
-
-    def heapify(self, i):
-        smallest = i
-        l = self.left(i)
-        r = self.right(i)
-
-        if l < len(self.heap) and self.heap[l] < self.heap[smallest]:
-            smallest = l
-        if r < len(self.heap) and self.heap[r] < self.heap[smallest]:
-            smallest = r
-
-        if smallest != i:
-            self.heap[i], self.heap[smallest] = self.heap[smallest], self.heap[i]
-            self.heapify(smallest)
-
-    def extract_min(self):
-        if not self.heap:
-            return None
-        if len(self.heap) == 1:
-            return self.heap.pop()
-
-        root = self.heap[0]
-        self.heap[0] = self.heap.pop()
-        self.heapify(0)
-        return root
-
-    def get_min(self):
-        return self.heap[0] if self.heap else None
+    def operations(self,_):
+        pass
 \end{lstlisting}
+        
         
 \end{algo}
 \newpage
@@ -155,6 +124,111 @@ class MinHeap:
         \end{tabular}
     \end{center}
 \end{summary}
+
+\subsubsection{Insert}
+\begin{algo}
+\begin{lstlisting}
+def insert(self, key):
+    self.heap.append(key)
+    i = len(self.heap) - 1
+    while i != 0 and self.heap[self.parent(i)] > self.heap[i]:
+        self.heap[i], self.heap[self.parent(i)] = self.heap[self.parent(i)], self.heap[i]
+        i = self.parent(i)
+\end{lstlisting}
+\end{algo}
+
+\subsubsection{Heapify}
+\begin{algo}
+\begin{lstlisting}
+def heapify(self, i):
+    smallest = i
+    l = self.left(i)
+    r = self.right(i)
+
+    if l < len(self.heap) and self.heap[l] < self.heap[smallest]:
+        smallest = l
+    if r < len(self.heap) and self.heap[r] < self.heap[smallest]:
+        smallest = r
+
+    if smallest != i:
+        self.heap[i], self.heap[smallest] = self.heap[smallest], self.heap[i]
+        self.heapify(smallest)
+\end{lstlisting}
+\end{algo}
+
+\subsubsection{Extract Min}
+\begin{algo}
+\begin{lstlisting}
+def extract_min(self):
+    if not self.heap:
+        return None
+    if len(self.heap) == 1:
+        return self.heap.pop()
+    root = self.heap[0]
+    self.heap[0] = self.heap.pop()
+    self.heapify(0)
+    return root
+\end{lstlisting}
+\end{algo}
+
+\subsubsection{Get Min}
+\begin{algo}
+\begin{lstlisting}
+def get_min(self):
+    return self.heap[0] if self.heap else None
+\end{lstlisting}
+\end{algo}
+
+\subsubsection{Build Heap}
+\begin{algo}
+\begin{lstlisting}
+def build_heap(self, arr):
+    self.heap = arr[:]
+    for i in range(len(self.heap) // 2 - 1, -1, -1):
+        self.heapify(i)
+\end{lstlisting}
+\end{algo}
+
+\subsubsection{Search}
+\begin{algo}
+\begin{lstlisting}
+def search(self, key):
+    return key in self.heap
+\end{lstlisting}
+\end{algo}
+
+\subsubsection{Delete}
+\begin{algo}
+\begin{lstlisting}
+def delete(self, key):
+    try:
+        index = self.heap.index(key)
+        self.heap[index] = self.heap[-1]
+        self.heap.pop()
+        if index < len(self.heap):
+            self.heapify(index)
+            parent = self.parent(index)
+            while index > 0 and self.heap[parent] > self.heap[index]:
+                self.heap[parent], self.heap[index] = self.heap[index], self.heap[parent]
+                index = parent
+                parent = self.parent(index)
+    except ValueError:
+        pass
+\end{lstlisting}
+\end{algo}
+
+\subsubsection{Heap Sort}
+\begin{algo}
+\begin{lstlisting}
+def heap_sort(self):
+    sorted_list = []
+    original = self.heap[:]
+    while self.heap:
+        sorted_list.append(self.extract_min())
+    self.heap = original
+    return sorted_list
+\end{lstlisting}
+\end{algo}
 \newpage
 
 \subsubsection{Common Problem}
