stacks and queues

--- a/00_notes/notes.tex
+++ b/00_notes/notes.tex
@@ -54,6 +54,10 @@
 \input{lectures/linked_list.tex}
 \newpage
 
+\section{Stack and Queue}
+\input{lectures/stack_queue.tex}
+\newpage
+
 \section{Images}
 \input{lectures/images.tex}
 \newpage
