--- a/00_notes/notes.tex
+++ b/00_notes/notes.tex
@@ -58,10 +58,6 @@
 \input{lectures/stack_queue.tex}
 \newpage
 
-\section{Images}
-\input{lectures/images.tex}
-\newpage
-
 \section{Trees}
 \input{lectures/trees.tex}
 \newpage
@@ -74,12 +70,16 @@
 \input{lectures/graphs.tex}
 \newpage
 
-\section{Backtracking}
-\input{lectures/backtracking.tex}
-\newpage
+% \section{Backtracking}
+% \input{lectures/backtracking.tex}
+% \newpage
 
 \section{Sorting}
 \input{lectures/sorting.tex}
+\newpage
+
+\section{Images}
+\input{lectures/images.tex}
 \newpage
 
 \end{document}
