--- a/00_notes/lectures/graphs.tex
+++ b/00_notes/lectures/graphs.tex
@@ -74,7 +74,7 @@ def bfs(start, graph):
                 \end{itemize}                
             } \\
             \midrule
-            417. Pacific Atlantic Water Flow & Given an m x n matrix of non-negative integers representing the height \\
+            **417. Pacific Atlantic Water Flow & Given an m x n matrix of non-negative integers representing the height \\
             & of each cell, return the coordinates of cells that can flow to both the Pacific \& \\
             & Atlantic oceans. \\
             \multicolumn{2}{p{\linewidth}}{
